<resources>
    <string name="app_name">AN-Boxjelly</string>
    <string name="IGSHPA_info">IGSHPA present calculation methods for the length of pipe required for vertically bored, horizontally bored and horizontally trenched GHE systems,
        along with variations of each method for heating and cooling. For bored systems, it is assumed that the ground, from which heat is exchanged, has a constant temperature all the time.
        This assumption works well when the amount of energy gained from and released to the ground is equivalent.
        However, if this assumption becomes false at a point in time, an unbalanced ground load correction factor needs to be verified to adjust the borehole length.</string>
    <string name="IGSHPA_info_V2">The International Ground Source Heat Pump Association (IGSHPA) provides pre-design calculation methods for vertically bored, horizontally bored and horizontally trenched systems.
        Their methods are based on the assumption that the ground, from which heat is exchanged, has a constant temperature at certain depths below the surface.</string>
    <string name="ASHRAE_info">The method presented by ASHRAE is a single equation that accounts for both heating and cooling modes and can be used for vertical borehole systems.
        This method utilises a temperature penalty that factors in the long-term borehole heating exchange effect and also includes three representative building heat loads along with their respective thermal resistances.</string>
    <string name="ASHRAE_info_V2">The International Ground Source Heat Pump Association (IGSHPA) provides pre-design calculation methods for vertically bored, horizontally bored and horizontally trenched systems.
        Their methods are based on the assumption that the ground, from which heat is exchanged, has a constant temperature at certain depths below the surface.</string>
    <string name="Development_info">The Developers of this application were Master students completing their software project at The University of Melbourne.</string>
    <string name="About_the_APP_info">Version 1.0. \nDeveloped by The University of Melbourne.\nThis mobile application is intended to be used as a tool to support contractors during the pre-design phase of GHE systems. This application and its results are not intended to replace current software and(or) hand calculations used in the pre-design process.</string>
    <string name="IGSHPAVB_info">Vertically bored systems are commonly used in both residential and commercial buildings as this configuration requires minimal land to be available to install.
        However, this system can be significantly expensive as a result of the cost of drilling and therefore both vertical and horizontal systems should be considered to determine the most viable configuration.</string>
    <string name="IGSHPAHB_info">Horizontally bored systems are a common configuration for properties that have large areas of earth to utilize. The benefit of using this configuration is that extensive excavation is not required.
        Depending on the property, the cost of damaging and replacing what currently occupies the land can exceed the cost of the drilling, making this an optimal setup.</string>
    <string name="IGSHPAHT_info">Horizontally trenched systems are typically the cheapest installation of the three systems because no drilling is required.
        However, these systems require large areas of available land to excavate in order to be installed and even when enough land is available, the cost of removing and replacing what is currently there can in itself be significantly expensive.</string>
    <string name="COP_info">Designed Coefficient of Performance.
        (Suggested value 4)</string>
    <string name="TCD_info">Total Cooling Capacity of the Heat Pump at design conditions.
        (Suggested value 20)</string>
    <string name="HCD_info">Total Heating Capacity of the Heat Pump at design conditions.
        (Suggested value 20)</string>
    <string name="EERD_info">Energy Efficiency Ratio at design cooling condition.
        (Suggested value 14.5)</string>
    <string name="TG_info">Deep – Earth Temperature.
        (Suggested value 18 for Melbourne)</string>
    <string name="TM_info">Mean Earth Temperature in top 10 feet of soil.
        (Suggested value 24 for Melbourne)</string>
    <string name="EWTmin_info">Minimum Entering Water Temperature at heating design conditions.
        (Suggested value 4 for Melbourne)</string>
    <string name="LWTmin_info">Minimum Leaving Water Temperature at heating design conditions.
        (Suggested value 1 for Melbourne)</string>
    <string name="EWTmax_info">Max entering water temperature at heating design conditions.
        (Suggested value 30 for Melbourne)</string>
    <string name="LWTmax_info">Max Leaving water temperature at heating design conditions.
        (Suggested value 34 for Melbourne)</string>
    <string name="KG_info">Ground Thermal Conductivity.
        (Suggested value 1.73 for Melbourne)</string>
    <string name="DGO_info">Diameter of the ground surrounding the borehole affected by heat transfer.
        (Suggested value 4.572)</string>
    <string name="DB_info">Diameter of Borehole.
        (Suggested value 0.12)</string>
    <string name="DPO_info">Outer Pipe Diameter.
        (Suggested value 0.027)</string>
    <string name="Dpi_info">Inner Pipe Diameter.
        (Suggested value 0.022)</string>
    <string name="kGrout_info">Grout Thermal Conductivity.
        (Suggested value 0.692)</string>
    <string name="kp_info">Pipe Thermal Conductivity.
        (Suggested value 0.346)</string>
    <string name="RTCLG_info">Actual Equipment Run Time in cooling mode per month.
        (Suggested value 595)</string>
    <string name="RTHTG_info">Actual Equipment Run Time in heating mode per month.
        (Suggested value 595)</string>
    <string name="AVGPipeDepth_info">Average Pipe Depth.
        (Suggested value 3.1)</string>
    <string name="AS_info">Annual Swing of earth surface temperature above and below TM.
        (Suggested value -0.1)</string>
    <string name="Alpha_info">Soil Thermal Diffusivity.
        (Suggested value 0.06)</string>
    <string name="RS_info">Soil Thermal Resistance.
        (Suggested value 1.6)</string>
    <string name="SM_info">Trench Spacing Multiplier
        (Suggested value 1.2)</string>
    <string name="PM_info">Pipe Diameter Multiplier.
        (Suggested value 1)</string>
    <string name="rpin_info">Inner Radius of U loop.
        (Suggested value 0.0137)</string>
    <string name="rpext_info">Outer Radius of U loop.
        (Suggested value 0.0167)</string>
    <string name="rBore_info">Radius of Borehole.
        (Suggested value 0.054)</string>
    <string name="Lu_info">Centre-to-Centre distance between pipes of U loop.
        (Suggested value 0.0471)</string>
    <string name="hconv_info">Internal Convection Coefficient.
        (Suggested value 1000)</string>
    <string name="TinHP_info">Heat Pump Entering Water Temperature.
        (Suggested value 4.4)</string>
    <string name="mfls_info">Mass Flow Rate of Fluid per kilowatt of peak hourly ground load.
        (Suggested value 0.074)</string>
    <string name="Cp_info">Ground Heat Exchanger (GHE) fluid (water) thermal heat capacity.
        (Suggested value 4000)</string>
    <string name="B_info">Distance between boreholes.
        (Suggested value 6.1)</string>
    <string name="H_info">Borehole Depth.
        (Suggested value 84.6)</string>
    <string name="NB_info">Number of Borehole GHEs.
        (Suggested value 120)</string>
    <string name="A_info">Borefield Geometrical Aspect Ratio.
        (Suggested value 1.2)</string>
    <string name="T_g_info">Undisturbed Ground Temperature.
        (Suggested value 12.41)</string>
    <string name="qy_info">Yearly Average Ground Load.
        (Suggested value -1.762)</string>
    <string name="qm_info">Monthly Ground Load.
        (Suggested value -100)</string>
    <string name="qh_info">Hourly Average Ground Load.
        (Suggested value -392.25)</string>
    <string name="VB_Info">Info for VB should be here !!!!!</string>
    <string name="Heat_Pump_Specification"><u>Heat Pump Specification</u></string>
    <string name="Heat_Pump_Design_Conditions"><u>Heat Pump Design Conditions</u></string>
    <string name="Ground_Properties"><u>Ground Properties</u></string>
    <string name="Pipeline_Properties"><u>Pipeline Properties</u></string>
    <string name="download_method_1">In PNG Form</string>
    <string name="download_method_2">In CSV Form</string>
    <string name="download_method_3">Send Design to 4ee Team</string>
    <string name="download_title">Export</string>
    <string name="development_information">Development Information</string>
    <string name="about_the_app">About the App</string>
    <string name="language">Language</string>
    <string name="choose_style">Style</string>
    <string name="vertically_bored_si">Vertically-Bored\n(SI Units)</string>
    <string name="vertically_bored_imperial">Vertically-Bored\n(Imperial Units)</string>
    <string name="horizontally_bored_si">Horizontally-Bored\n(SI Units)</string>
    <string name="horizontally_bored_imperial">Horizontally-Bored\n(Imperial Units)</string>
    <string name="horizontally_trenched_imperial">Horizontally-Trenched\n(Imperial Units)</string>
    <string name="horizontally_trenched_si">Horizontally-Trenched\n(SI Units)</string>
</resources>