<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@color/transparent">

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/title"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/download_title"
            android:gravity="center">

        </TextView>
        <View
            android:layout_width="300dp"
            android:layout_height="3dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@color/line_button"
            android:layout_gravity="center">

        </View>
        <Button
            android:id="@+id/download_method_1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/line_button"
            android:text="@string/download_method_1"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center">

        </Button>
        <View
            android:layout_width="300dp"
            android:layout_height="3dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:background="@color/line_button"
            android:layout_gravity="center">

        </View>
        <Button
            android:id="@+id/download_method_2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/line_button"
            android:text="@string/download_method_2"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center">

        </Button>
        <View
            android:layout_width="300dp"
            android:layout_height="3dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:background="@color/line_button"
            android:layout_gravity="center">

        </View>
        <Button
            android:id="@+id/download_method_3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/line_button"
            android:text="@string/download_method_3"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center">

        </Button>




    </LinearLayout>
</RelativeLayout>